[package]
name = "engine_types"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "0.9" }
ethabi = { version = "17" }
hex = { version = "0.4" }
primitive-types = { version = "0.11" }
sha3 = { version = "0.10" }